--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "country-state-city": "^3.0.1",
+    "express": "^4.17.3",
     "framer-motion": "^6.2.3",
+    "mongoose": "^6.2.2",
     "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
